# advent_of_code_2024_solutions

./: .gitignore  README.md
puzzle1/: CMakeLists.txt  main.cpp
puzzle2/: main.py
puzzle3/: CMakeLists.txt  main.cpp
puzzle4/: main.py
